// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/integrations/outgoing_oauth_connections/OAuthConnectionAudienceInput > should match snapshot when an audience url with a wildcard is configured, and typed in value starts with configured audience url 1`] = `
<div>
  <input
    autocomplete="off"
    class="form-control"
    id="url"
    maxlength="1024"
    placeholder="Test placeholder"
    value="https://aud.com/api/it_matches"
  />
  <div
    class="outgoing-oauth-audience-match-message-container"
  >
    <span>
      <svg
        fill="currentColor"
        height="20"
        version="1.1"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
        />
      </svg>
    </span>
    <span
      class="outgoing-oauth-audience-match-message"
    >
      Not linked to an OAuth connection
    </span>
  </div>
</div>
`;

exports[`components/integrations/outgoing_oauth_connections/OAuthConnectionAudienceInput > should match snapshot when typed in value does not have an exact match 1`] = `
<div>
  <input
    autocomplete="off"
    class="form-control"
    id="url"
    maxlength="1024"
    placeholder="Test placeholder"
    value="https://aud.com/api/no_match"
  />
  <div
    class="outgoing-oauth-audience-match-message-container"
  >
    <span>
      <svg
        fill="currentColor"
        height="20"
        version="1.1"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
        />
      </svg>
    </span>
    <span
      class="outgoing-oauth-audience-match-message"
    >
      Not linked to an OAuth connection
    </span>
  </div>
</div>
`;

exports[`components/integrations/outgoing_oauth_connections/OAuthConnectionAudienceInput > should match snapshot when typed in value matches a configured audience 1`] = `
<div>
  <input
    autocomplete="off"
    class="form-control"
    id="url"
    maxlength="1024"
    placeholder="Test placeholder"
    value="https://aud.com/api"
  />
  <div
    class="outgoing-oauth-audience-match-message-container"
  >
    <span>
      <svg
        fill="currentColor"
        height="20"
        version="1.1"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
        />
      </svg>
    </span>
    <span
      class="outgoing-oauth-audience-match-message"
    >
      Not linked to an OAuth connection
    </span>
  </div>
</div>
`;

exports[`components/integrations/outgoing_oauth_connections/OAuthConnectionAudienceInput > should match snapshot with existing connections 1`] = `
<div>
  <input
    autocomplete="off"
    class="form-control"
    id="url"
    maxlength="1024"
    placeholder="Test placeholder"
    value=""
  />
  <div
    class="outgoing-oauth-audience-match-message-container"
  >
    <span>
      <svg
        fill="currentColor"
        height="20"
        version="1.1"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
        />
      </svg>
    </span>
    <span
      class="outgoing-oauth-audience-match-message"
    >
      Not linked to an OAuth connection
    </span>
  </div>
</div>
`;

exports[`components/integrations/outgoing_oauth_connections/OAuthConnectionAudienceInput > should match snapshot with no existing connections 1`] = `
<div>
  <input
    autocomplete="off"
    class="form-control"
    id="url"
    maxlength="1024"
    placeholder="Test placeholder"
    value=""
  />
</div>
`;
